--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script defer src="https://www.youtube.com/iframe_api"></script>
+    <script>
+      const youtubeAPIReady = true;
+      function onYouTubeIframeAPIReady() {}
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
