--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script defer src="https://www.youtube.com/iframe_api"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
     <script>
-      const youtubeAPIReady = true;
-      function onYouTubeIframeAPIReady() {}
+      var isYouTubeIframeAPIReady = false;
+      function onYouTubeIframeAPIReady() {
+        isYouTubeIframeAPIReady = true;
+      }
     </script>
   </head>
   <body>
