Add functionality to PlayButton

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
        */
 
       function onYouTubeIframeAPIReady() {
+        console.log("YouTube IFrame API Ready");
         window.isYouTubeIframeAPIReady = true;
       }
     </script>
