Add author to HTML header

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Victor Ma" />
     <meta
       name="description"
       content="Mimid is a music player designed for learning songs by ear. Mimid is free to use, ad-free, and free and open source."
