Add WebSite structured data

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,15 @@
         window.isYouTubeIframeAPIReady = true;
       }
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Mimid",
+        "alternateName": "Mimid Music Player",
+        "url": "https://mimid.app/"
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
