--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Victor Ma" />
+    <meta name="application-name" content="Mimid" />
     <meta
       name="description"
       content="Mimid is a music player designed for learning songs by ear. Mimid is free to use, ad-free, and free and open source."
