--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Mimid is a music player designed for learning songs by ear. Mimid is free to use, ad-free, and free and open source."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple_touch_icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
