--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,11 @@
         "url": "https://mimid.app/"
       }
     </script>
+    <script
+      defer
+      data-domain="mimid.app"
+      src="https://plausible.io/js/script.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
