Replace Plausible Analytics with Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LBC1DQ85VF"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LBC1DQ85VF");
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/maximized_icon.png" />
     <meta
@@ -50,11 +64,6 @@
         "url": "https://mimid.app/"
       }
     </script>
-    <script
-      defer
-      data-domain="mimid.app"
-      src="https://plausible.io/js/script.js"
-    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
